@startuml

title __DISTRIBUTED's Class Diagram__\n

  namespace ethanmmd.mastermind {
    namespace distributed {
      class ethanmmd.mastermind.distributed.LogicServerImplementation {
          ~ createDispatchers()
      }
    }
  }
  

  namespace ethanmmd.mastermind {
    namespace distributed {
      class ethanmmd.mastermind.distributed.MastermindClient {
          {static} + main()
          # createLogic()
          # createView()
      }
    }
  }
  

  namespace ethanmmd.mastermind {
    namespace distributed {
      class ethanmmd.mastermind.distributed.MastermindServer {
          + MastermindServer()
          {static} + main()
          - serve()
      }
    }
  }
  

  namespace ethanmmd.mastermind {
    namespace distributed {
      class ethanmmd.mastermind.distributed.TCPIP {
          + TCPIP()
          + TCPIP()
          {static} + createClientSocket()
          {static} + createServerSocket()
          + receiveProposedCombination()
          + sendProposedCombination()
      }
    }
  }
  

  ethanmmd.mastermind.distributed.LogicServerImplementation -up-|> ethanmmd.mastermind.controllers.implementation.LogicImplementation
  ethanmmd.mastermind.distributed.MastermindClient -up-|> ethanmmd.mastermind.Mastermind
  ethanmmd.mastermind.distributed.MastermindServer o-- ethanmmd.mastermind.distributed.dispatchers.DispatcherPrototype : dispatcherPrototype
  ethanmmd.mastermind.distributed.TCPIP -up-|> ethanmmd.utils.AbstractTCPIP


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
